# kd-tree-omp

./: CMakeLists.txt  main.cpp
data/: 2D_points.csv
src/: KDNode.h  KDTree.cpp  KDTree.h
utils/: generate.py
